src/App.css
.App {
  width: 95vw;
  margin: auto;
}

.repo-info {
  height: 2rem;
  font-size: 2rem;
  width: 100%;
  margin: 2.5rem 0;
  display: inline-flex;
  justify-content: center;
}

.repo-info > input {
  text-align: center;
  font-size: 16px;
  width: 40%;
  margin-right: 2rem;
}

.status {
  text-align: center;
}

.container {
  display: flex;
  height: 68vh;
}

.labels {
  width: 15%;
  height: inherit;
  overflow: scroll;
  border: 1px solid #d2d2d2;
  padding-left: 1rem;
}

.chart {
  width: 85%;
}

option:hover {
  cursor: pointer;
  font-weight: bold;
}

option.selected {
  cursor: pointer;
  background: #accef7;
}

.andFilter{
  margin-bottom: 1rem;
}

